--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>HTML document</title>
       <link rel="stylesheet" href="style.css">
       <script src ="scriptcalc.js"></script>
+      <script src ="script.js"></script>
       <title>first</title>
     </head>
     <body bgcolor="#30d5c8">
@@ -58,13 +59,17 @@
 
             <center><b> Индивидуальное задание №4. Резюме</b><p></p>
                 <form name="form4">
-                    ФИО: Хуснулин Руслан Дамирович <br>
+                    ФИО: Руслан Дамирович <br>
                     Пол: М <br>
                     Возраст: 20 лет
-                    <br><br>
+                     <br><br>
                   <center><img src="unnamed.jpg" alt="Photo" width="200" height="200">
                     <br><br>
                     <input type="button" value="Показать место проживания" onClick="Show()" /><br><br>
+                    <p align = "center" id = "secondname"> Фамилия: Хуснулин </p>
+                    <br>
+                     <input type = "text" id = "_secondname" placeholder = "Введите фамилию">
+                     <input type = "button" id = "btn" value = "Rename">
                     </center> 
                 </form>
 
